syntax = "proto3";

package enum_types;

enum TestEnum {
  ZERO = 0;
  FOO = 1;
  BAR = 2;
  BAZ = 3;
}

message EnumMessage {
  TestEnum f_enum = 1;
}
